--- a/source/lib/config.json
+++ b/source/lib/config.json
@@ -1,6 +1,4 @@
 {
-    "FANNIE_DOWNLOAD": "",
-    "FREDDIE_DOWNLOAD": "",
-    "SAMPLE_START": 2014,
-    "SAMPLE_END": 2023
+    "SAMPLE_START": "2025-04-01",
+    "SAMPLE_END": "2025-04-01"
 }
