--- a/source/lib/config.json
+++ b/source/lib/config.json
@@ -1,6 +1,7 @@
 {
     "SAMPLE_START": "2015-01-01",
     "SAMPLE_END": "2025-05-01",
-    "PERIOD": "MS"
+    "PERIOD": "MS",
+    "SEED": 123
 }
 
