--- a/source/derived/fannie_mae/SConscript
+++ b/source/derived/fannie_mae/SConscript
@@ -5,6 +5,7 @@ from source.lib.helpers.utils import get_quarters
 with open('../../../source/lib/config.json', 'r') as file:
     CONFIG = json.load(file)
 QUARTERS = get_quarters(CONFIG['SAMPLE_START'], CONFIG['SAMPLE_END'])
+N_PARTITIONS = CONFIG['N_PARTITIONS']
 
 helpers = [
     '#source/lib/config.json',
@@ -16,27 +17,16 @@ helpers = [
 
 source = [
     '#source/derived/fannie_mae/build_fannie_mae.py',
-    Glob('#datastore/raw/fannie_mae/data/*.csv'),
+    Glob('#datastore/raw/fannie_mae/data/**/*.parquet'),
     '#datastore/raw/crosswalks/data/cw_state_county.csv',
     '#datastore/raw/crosswalks/data/cw_period_date.csv',
     '#output/derived/mortgage_rates/mortgage30us.csv'
 ] + helpers
 
-
 target = []
 for quarter in QUARTERS:
     target.append(f'#datastore/output/derived/fannie_mae/sflp_clean/{quarter}.parquet')
     target.append(f'#output/derived/fannie_mae/sflp_clean/{quarter}.log')
-
-env.Python(target, source)
-
-
-
-source = ['#source/derived/fannie_mae/repartition_fannie_mae.py']
-for quarter in QUARTERS:
-    source.append(f'#datastore/output/derived/fannie_mae/sflp_clean/{quarter}.parquet')
-
-target = '#datastore/output/derived/fannie_mae/sflp_clean'
 
 env.Python(target, source)
 
