--- a/source/lib/config.json
+++ b/source/lib/config.json
@@ -3,6 +3,7 @@
     "SAMPLE_END": "2025-05-01",
     "PERIOD": "MS",
     "SEED": 123,
-    "CHUNKSIZE": 100000
+    "CHUNKSIZE": 100000,
+    "N_PARTITIONS": 1000
 }
 
