--- a/source/derived/fannie_mae/SConscript
+++ b/source/derived/fannie_mae/SConscript
@@ -26,8 +26,8 @@ source = [
 target = []
 for quarter in QUARTERS:
     n_partitions = len(list(glob.glob(str('datastore/raw/fannie_mae/data/' + quarter + '/*.parquet'))))
-    target.extend([f'#datastore/output/derived/fannie_mae/sflp_clean/{quarter}.part_{i}.parquet' for i in range(n_partitions)])
-    target.append(f'#output/derived/fannie_mae/sflp_clean/{quarter}.log')
+    target += [f'#datastore/output/derived/fannie_mae/sflp_clean/{quarter}/part.{i}.parquet' for i in range(n_partitions)]
+    target += [f'#output/derived/fannie_mae/sflp_clean/{quarter}.log']
 
 env.Python(target, source)
 
